src/main/java/com/example/postBlog/error/PostAlreadyExistException.java
package com.example.postBlog.error;

public class PostAlreadyExistException extends RuntimeException{
    
}
